# bezitopo

./: .gitignore  AUTHORS.md  CMakeLists.txt  CONTRIBUTING.md  FindBezitopo.cmake  README  README.md  TODO  absorient.cpp  absorient.h  angle.cpp  angle.h  arc.cpp  arc.h  bezier.cpp  bezier.h  bezier3d.cpp  bezier3d.h  bezitest.cpp  bezitopo.cpp  bezitopo.h  bezitopo_en.ts  bezitopo_es.ts  bicubic.cpp  bicubic.h  binio.cpp  binio.h  boundrect.cpp  boundrect.h  breakline.cpp  breakline.h  brent.cpp  brent.h  carlsontin.cpp  choosemap.cpp  choosemap.h  cidialog.cpp  cidialog.h  circle.cpp  circle.h  (+181 more)
.github/workflows/: linux-gcc-build.yml
cmake/Modules/: FindFFTW.cmake
dat/: tinytin-txt.dxf
src/: angle.cpp  angle.h  arc.cpp  arc.h  bezier.cpp  bezier.h  bezier3d.cpp  bezitest.cpp  bezitopo.cpp  bezitopo.h  bezitopo_en.ts  bezitopo_es.ts  bicubic.cpp  boundrect.cpp  boundrect.h  breakline.h  carlsontin.cpp  carlsontin.h  cidialog.cpp  circle.cpp  circle.h  closure.cpp  cmdopt.h  cogo.cpp  cogo.h  cogospiral.cpp  contour.cpp  contour.h  csv.h  curvefit.cpp  curvefit.h  document.cpp  document.h  drawobj.cpp  drawobj.h  dxf.cpp  dxf.h  ellipsoid.h  except.h  factordialog.cpp  (+91 more)
